--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "commerce-sdk": "^3.0.0",
+    "dc-delivery-sdk-js": "^0.12.1",
+    "framer-motion": "^11.0.6",
     "next": "latest",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.63.4",
+    "sass-lint": "^1.13.1"
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@types/node": "18.11.9",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.2.8",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7",
     "typescript": "4.8.4"
   }
 }
