initial build structure

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,3 +3,12 @@ SFDC_SECRET=D5M4p4FUz5_Rx6v0XybGakwaGIto5q_rStZ--1r66fI
 SFDC_ORGANIZATIONID=f_ecom_bldb_001
 SFDC_SHORTCODE=4u50xa0o
 SFDC_SITEID=RefArch
+
+#AMPLIENCE
+
+DYNAMIC_CONTENT_DELIVERY_KEY=
+DYNAMIC_CONTENT_HUB_NAME=platinumpanda
+
+#AMPLIENCE 
+DYNAMIC_CONTENT_BASE_URL=
+DYNAMIC_CONTENT_SECURE_MEDIA_HOST=
