--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^11.0.6",
     "next": "latest",
     "nprogress": "^0.2.0",
+    "object-sizeof": "^2.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.63.4",
