--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.3.2",
     "commerce-sdk": "^3.0.0",
     "dc-delivery-sdk-js": "^0.12.1",
+    "dc-visualization-sdk": "^1.1.0",
     "framer-motion": "^11.0.6",
     "next": "latest",
     "nprogress": "^0.2.0",
@@ -16,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.63.4",
-    "sass-lint": "^1.13.1"
+    "sass-lint": "^1.13.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
