--- a/.env.local.example
+++ b/.env.local.example
@@ -12,3 +12,5 @@ DYNAMIC_CONTENT_HUB_NAME=platinumpanda
 #AMPLIENCE 
 DYNAMIC_CONTENT_BASE_URL=
 DYNAMIC_CONTENT_SECURE_MEDIA_HOST=
+
+NEXT_PUBLIC_HOSTED_URL=http://localhost:3000
