--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "classnames": "^2.3.2",
     "commerce-sdk": "^3.0.0",
     "dc-delivery-sdk-js": "^0.12.1",
