--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "classnames": "^2.3.2",
     "commerce-sdk": "^3.0.0",
+    "cookies": "^0.9.1",
     "dc-delivery-sdk-js": "^0.12.1",
     "dc-visualization-sdk": "^1.1.0",
     "framer-motion": "^11.0.6",
