--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dc-delivery-sdk-js": "^0.12.1",
     "dc-visualization-sdk": "^1.1.0",
     "framer-motion": "^11.0.6",
+    "markdown-to-jsx": "^7.4.7",
     "next": "latest",
     "nprogress": "^0.2.0",
     "object-sizeof": "^2.6.4",
