sed-13: code refactor for login & register flow

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "axios": "^1.6.7",
     "classnames": "^2.3.2",
     "commerce-sdk": "^3.0.0",
+    "cookies": "^0.9.1",
     "dc-delivery-sdk-js": "^0.12.1",
     "dc-visualization-sdk": "^1.1.0",
     "framer-motion": "^11.0.6",
+    "markdown-to-jsx": "^7.4.7",
     "next": "latest",
     "nprogress": "^0.2.0",
     "object-sizeof": "^2.6.4",
