--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "chart.js": "^4.4.3",
     "classnames": "^2.3.2",
     "commerce-sdk": "^3.0.0",
     "cookies": "^0.9.1",
@@ -17,8 +18,12 @@
     "next": "latest",
     "nprogress": "^0.2.0",
     "object-sizeof": "^2.6.4",
+    "rc-slider": "^10.6.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-range": "^1.8.14",
+    "react-slider": "^2.0.6",
     "sass": "^1.63.4",
     "sass-lint": "^1.13.1",
     "zustand": "^4.5.2"
