--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "sass": "^1.63.4",
     "sass-lint": "^1.13.1",
+    "swiper": "^11.1.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
